# goat

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  compose.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
apps/core/: Dockerfile  pyproject.toml
apps/core/alembic/: env.py
apps/core/alembic/versions/: 0975d67ad88f_add_thumbnail_url_and_records_to_bundle.py  12d658d174ae_add_bundle_tables.py  12d658d174ae_add_dataset_package_tables.py  7aabc76c86c2_add_bundle_id_to_layer_project_group.py  b3c4d5e6f7a1_add_document_asset_type.py  c3a1d7f2e9b4_add_organization_analytics.py  c4d5e6f7a8b2_convert_assettype_to_varchar.py  ccb2a3c570b2_add_project_custom_basemaps.py  d1e2f3a4b5c6_merge_custom_basemaps_and_document_asset.py  e8bd0e42b8eb_add_custom_domains.py  f1a2b3c4d5e6_add_resource_grant_folder_sharing.py  f3f8f8565361_add_field_config_to_layer.py  init.py
apps/core/src/core/: main.py
apps/core/src/core/core/: config.py  content.py  layer.py
apps/core/src/core/crud/: base.py  crud_bundle.py  crud_dataset_package.py  crud_datasets.py  crud_folder.py  crud_invitation.py  crud_layer.py  crud_layer_project.py  crud_layer_project_group.py  crud_organization.py  crud_organization_analytics.py  crud_organization_domain.py  crud_project.py  crud_project_copy.py  crud_role.py  crud_share.py  crud_stripe.py  crud_team.py  crud_user.py  crud_user_project.py
apps/core/src/core/db/: seed_bundle_types.py  seed_costs.py  seed_dataset_package_types.py  seed_default.py  seed_roles.py
apps/core/src/core/db/models/: __init__.py  _base_class.py  _link_model.py  asset.py  bundle.py  bundle_artifact.py  bundle_type.py  cost.py  credit_usage.py  data_store.py  dataset_package.py  dataset_package_artifact.py  dataset_package_type.py  folder.py  invitation.py  layer.py  organization.py  organization_analytics.py  organization_domain.py  permission.py  project.py  report_layout.py  resource.py  role.py  system_setting.py  team.py  user.py  workflow.py
apps/core/src/core/db/sql/: init_functions.py  init_triggers.py
apps/core/src/core/endpoints/: deps.py
apps/core/src/core/endpoints/v2/: api.py  asset.py  billing.py  bundle.py  custom_domain_lookup.py  (+15 more)
apps/core/src/core/middleware/: auth_context.py
apps/core/src/core/schemas/: __init__.py  asset.py  bundle.py  common.py  custom_basemap.py  data_store.py  dataset_package.py  email.py  error.py  folder.py  invitations.py  layer.py  organization.py  organization_analytics.py  organization_domain.py  plan.py  project.py  share.py  team.py  user.py
apps/core/src/core/scripts/: collapse_accounts_schema.py  initial_data.py  reconcile_domains.py  usage_snapshot.py
apps/core/src/core/services/: caddy_provisioner.py  domain_reconciliation.py  geoapi.py  provisioner.py  s3.py
apps/core/src/core/utils/: __init__.py  email.py  i18n.py  other.py  partial.py
apps/core/tests/: conftest.py  utils.py
apps/core/tests/api/: test_analytics_dashboards.py  test_layer_visibility.py  test_organization_analytics.py  test_organization_domain.py  test_project_tracking.py  test_user.py
apps/core/tests/services/: test_caddy_provisioner_smoke.py  test_domain_reconciliation.py  test_provisioner_fake.py
apps/core/tests/unit/: test_asset_endpoint.py  test_asset_model.py  test_auth_context_middleware.py  test_authz_sql_injection.py  test_keycloak_deps.py
apps/core/tests/unit/crud/: test_remap_basemap_layer_config.py
apps/core/tests/unit/schemas/: test_custom_basemap_schemas.py  test_invitation_schemas.py  test_layer_schemas.py  test_organization_analytics_schemas.py  test_user_schemas.py
apps/processes/: Dockerfile  pyproject.toml
apps/processes/src/processes/: config.py  ducklake.py  main.py
apps/processes/src/processes/models/: processes.py
apps/processes/src/processes/routers/: processes.py  workflows.py
apps/processes/src/processes/services/: analytics_service.py  beta_access.py  tool_registry.py  windmill_client.py
apps/processes/tests/: test_processes_router.py  test_tool_registry.py
apps/processes/workers/: Dockerfile
(+679 files in other folders)
