[project]
name = "core"
version = "2.0.0"
requires-python = ">3.10,<3.12"
description = "GOAT Core"
authors = [{ name = "Plan4Better GmbH", email = "dev@plan4better.de" }]
dependencies = [
  "asyncpg==0.30.0",
  "psycopg==3.2.3",
  "psycopg-binary==3.2.3",
  "shapely==2.0.6",
  "aiohttp==3.11.2",
  "requests==2.32.3",
  "alembic==1.14.0",
  "httpx==0.27.2",
  "python-jose[cryptography]==3.4.0",
  "geojson==3.1.0",
  "alembic-utils>=0.8.5",
  "rich==13.9.4",
  "pygeofilter==0.2.4",
  "pycountry==23.12.11",
  "fastapi[standard]==0.115.12",
  "fastapi-pagination==0.13.1",
  "pydantic==2.11.5",
  "sqlalchemy[asyncio]==2.0.41",
  "geoalchemy2==0.17.1",
  "sqlmodel==0.0.24",
  "pydantic-settings==2.9.1",
  "boto3==1.38.23",
  "goatlib",
  "goatobs",
  "dnspython>=2.8.0",
  "stripe>=6.7.0,<8.0.0",
  "python-keycloak>=2.16.3",
  "emails>=0.6",
  "babel>=2.13.0",
]


[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "asyncpg-stubs>=0.30.0",
  "pytest>=8.3.5",
  "types-requests>=2.32.4.20250611",
]
