[project]
name = "processes"
version = "1.0.0"
description = "GOAT Processes API - OGC API Processes implementation for GOAT tools"
authors = [{ name = "Plan4Better GmbH", email = "dev@plan4better.de" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "duckdb>=1.4.3",
    "asyncpg>=0.29.0",
    "pygeofilter>=0.2.0",
    "sentry-sdk>=2.0.0",
    "goatlib",
    "goatobs",
    "cachetools",
    "wmill>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.25.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/processes"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
